src/Components/UI/SideBar/SideBar.module.scss
.SideBar{
    width:0vw;
    position: relative;
    overflow: hidden;
    background-color: #e8f1f2;
    z-index: 150; 
    transition: all .5s;
}
.MobileSideBar{
    width:0vw;
    position: absolute;
    overflow: hidden;
    background-color: #e8f1f2;
    z-index: 150; 
    transition: all .5s;
    height:100%;
    top:0px;
}
.Groups{
    height:93%;
    overflow-y: scroll;
}
.CreateGroupButton{
    height:7%;
    width:100%;
}
.Button{
    height:100%;
    width:100%;
    background-color:rgba(73, 212, 157, 0.75) !important;
    /* background: linear-gradient(0deg, rgb(108, 175, 144), rgba(73, 212, 157, 0.75)) !important;     */
    border-radius: 0px !important;
}
.Button:hover{
    background-color:rgba(73, 212, 157, 1) !important;
}
.ButtonText{
    font-weight: 900 !important;
    color:white !important;
    text-shadow: 0px 0px 10px rgba(0,0,0,0.75);
}
.Open{
    width:20vw;
}
.MobileOpen{
    width:50vw;
}
.MobileOverlay{
    width: 100%;
    height: 100%;
    z-index: 90;
    position: absolute;
    background: rgba(0,0,0,0.25);
    top:0;
    left:0;
}

